successful working gc, gonna min max it now